Conexión a la base de datos, obtener y insertar articulos

--- a/UI/FitoControl/nbproject/project.properties
+++ b/UI/FitoControl/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FitoControl
 excludes=
+file.reference.libreriaFitoControl.jar=..\\..\\Lib\\out\\artifacts\\libreriaFitoControl_jar\\libreriaFitoControl.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.libreriaFitoControl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
