--- a/fitoControl.UI/nbproject/project.properties
+++ b/fitoControl.UI/nbproject/project.properties
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication45.jar
+dist.jar=${dist.dir}/FitoControlUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication45
+dist.jlink.output=${dist.jlink.dir}/FitoControlUI
 endorsed.classpath=
 excludes=
 file.reference.fitoControl.Database.jar=..\\fitoControl.Database\\out\\artifacts\\fitoControl_Database_jar\\fitoControl.Database.jar
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication45
+jlink.launcher.name=FitoControlUI
 main.class=fitocontrol.ui.FitoControlUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
